<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_root"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingRight="12dp"
    android:paddingBottom="4dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/setting_max_byte"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="4dp"
        android:hint="@string/hint_input_length"
        android:inputType="number"
        android:maxLines="1"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        android:theme="@style/EditTextTheme" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/to_default"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_default_value"
        android:textColor="@color/dark_bgrey"
        android:background="@drawable/selector_item_touch_effect"
        android:layout_marginLeft="10dp"
        android:padding="12dp"
        android:textSize="14sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true">

        <TextView
            android:padding="12dp"
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/selector_item_touch_effect"
            android:text="@string/cancel" />

        <TextView
            android:padding="12dp"
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/cancel_button"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/selector_item_touch_effect"
            android:text="@string/yes" />
    </RelativeLayout>
    </RelativeLayout>

</LinearLayout>