<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/period"
                android:textColor="@color/colorDarkPrimary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/export_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/all_days"
                android:textSize="15sp"
                android:textColor="@color/colorLightprimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="7dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/export_start"
                android:background="@drawable/background_select_date"
                android:padding="8dp">

                <TextView
                    android:id="@+id/export_text_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2014.01.12"
                    android:textColor="@color/colorLightprimary"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_toRightOf="@id/export_text_start_date"
                    android:src="@mipmap/image_pick_date" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="3dp"
                android:text="~"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/export_end"
                android:background="@drawable/background_select_date"
                android:padding="8dp">

                <TextView
                    android:id="@+id/export_text_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2014.01.12"
                    android:textColor="@color/colorLightprimary"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_toRightOf="@id/export_text_end_date"
                    android:src="@mipmap/image_pick_date" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/export_message_type"
                android:textColor="@color/colorDarkPrimary"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/export_type_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/message_type_export"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_filename"
                android:textColor="@color/colorDarkPrimary"
                android:layout_marginRight="6dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/export_file_name"
                android:layout_width="match_parent"
                android:hint="@string/input_filename"
                android:textColor="@color/colorLightprimary"
                android:theme="@style/EditTextTheme"
                android:textColorHint="@color/colorHint"
                android:textSize="15sp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/export_button"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:textSize="15sp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/export"/>
</LinearLayout>